k8s/networking/alb-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
  labels:
    app: alb
spec:
  controller: ingress.k8s.aws/alb
